Bug 449132 - Extra line separator appears on top of Recent Files section in context menu of search results
Summary: Extra line separator appears on top of Recent Files section in context menu o...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: ratijas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-25 11:55 UTC by ratijas
Modified: 2022-06-29 23:36 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.6, 5.25.3, 5.26
Sentry Crash Report:


Attachments
Kickoff applet - extra line in menu (221.76 KB, image/png)
2022-01-25 11:55 UTC, ratijas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2022-01-25 11:55:20 UTC
Created attachment 145905 [details]
Kickoff applet - extra line in menu

SUMMARY

An extra line looks like a broken menu or a visual glitch.

STEPS TO REPRODUCE
1. Open Kickoff
2. Search for some app that has a "Recent Files" support (e.g. Qt Creator)
3. Right click it (imagine, you wanted to pin it back to a task manager on a panel)

OBSERVED RESULT
There's an extra line right above the Recent Files section of the context menu.

EXPECTED RESULT
No stray lines.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.24.80
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.2
Kernel Version: 5.16.2-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-6700HQ CPU @ 2.60GHz
Memory: 15.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 970M/PCIe/SSE2
Comment 1 Nate Graham 2022-01-25 21:15:50 UTC
Can reproduce.
Comment 2 Bug Janitor Service 2022-06-25 22:47:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1871
Comment 3 ratijas 2022-06-29 22:45:34 UTC
Git commit c0d5d824f46ab9b70b5a6b2bd126e6e7a7df8d9b by ivan tkachenko.
Committed on 29/06/2022 at 22:30.
Pushed by ratijas into branch 'master'.

applets/kicker: Get rid of a separator just above title menu item

M  +6    -2    applets/kicker/plugin/recentusagemodel.cpp
M  +9    -2    applets/kicker/plugin/runnermatchesmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/c0d5d824f46ab9b70b5a6b2bd126e6e7a7df8d9b
Comment 4 ratijas 2022-06-29 23:04:48 UTC
Git commit ca2f02e29bd30c8ea643402c04714b0f0d2f5e67 by ivan tkachenko.
Committed on 29/06/2022 at 22:53.
Pushed by ratijas into branch 'Plasma/5.24'.

applets/kicker: Get rid of a separator just above title menu item
(cherry picked from commit c0d5d824f46ab9b70b5a6b2bd126e6e7a7df8d9b)

M  +6    -2    applets/kicker/plugin/recentusagemodel.cpp
M  +9    -2    applets/kicker/plugin/runnermatchesmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/ca2f02e29bd30c8ea643402c04714b0f0d2f5e67
Comment 5 ratijas 2022-06-29 23:16:49 UTC
Git commit 520e30a64a4e7d13c56fb8cd1df27698cae234ea by ivan tkachenko.
Committed on 29/06/2022 at 23:06.
Pushed by ratijas into branch 'Plasma/5.25'.

applets/kicker: Get rid of a separator just above title menu item
(cherry picked from commit c0d5d824f46ab9b70b5a6b2bd126e6e7a7df8d9b)

M  +6    -2    applets/kicker/plugin/recentusagemodel.cpp
M  +9    -2    applets/kicker/plugin/runnermatchesmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/520e30a64a4e7d13c56fb8cd1df27698cae234ea