applets/kicker: Get rid of a separator just above title menu item

BUG: 449132